--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ kotlin.mpp.androidSourceSetLayoutVersion=2
 
 kotlin.version=1.8.20
 agp.version=8.0.1
-compose.version=1.4.0
+compose.version=1.5.0-dev1122
 
 org.jetbrains.compose.experimental.uikit.enabled=true
 kotlin.native.cacheKind=none
