--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ kotlin.mpp.androidSourceSetLayoutVersion=2
 
 kotlin.version=1.9.0
 agp.version=8.0.1
-compose.version=1.5.0-dev1136
+compose.version=1.5.0-beta02
 
 org.jetbrains.compose.experimental.uikit.enabled=true
 kotlin.native.cacheKind=none
