Adds initial plans screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,23 @@
 [versions]
 agp = "8.2.0-alpha15"
+androidx-test-ext-junit = "1.1.5"
+appcompat = "1.6.1"
 buildkonfig-gradle-plugin = "0.13.3"
+compose= "1.5.10-beta02"
+core = "1.12.0"
+core-ktx = "1.12.0"
+espresso-core = "3.5.1"
 firebase = "1.8.0"
 image-loader = "1.6.4"
+junit = "4.13.2"
 koin-compose = "1.0.3"
 koin-core = "3.4.2"
-kotlin = "1.8.21"
-kotlinx-coroutines-core = "1.7.2"
+kotlin = "1.9.10"
+kotlinx-coroutines-core = "1.7.3"
 kotlinx-datetime = "0.4.0"
 kotlinx-serialization-json = "1.5.1"
 ktor = "2.3.3"
-core-ktx = "1.10.1"
-junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-appcompat = "1.6.1"
 material = "1.9.0"
-core = "1.10.1"
 moko-mvvm = "0.16.1"
 moko-resources = "0.23.0"
 uuid = "0.8.0"
