--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,9 @@ android.nonTransitiveRClass=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 
-kotlin.version=1.9.0
-agp.version=8.0.1
-compose.version=1.5.0-beta02
+kotlin.version=1.9.10
+agp.version=8.1.1
+compose.version=1.5.10-beta02
 
 org.jetbrains.compose.experimental.uikit.enabled=true
-kotlin.native.cacheKind=none
+#kotlin.native.cacheKind=none
