--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,11 +21,12 @@ material = "1.9.0"
 moko-mvvm = "0.16.1"
 moko-resources = "0.23.0"
 uuid = "0.8.0"
-voyager = "1.0.0-rc05"
+voyager = "1.0.0-rc07"
 
 
 [libraries]
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
+voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
 voyager-tabNavigator = { module = "cafe.adriel.voyager:voyager-tab-navigator", version.ref = "voyager" }
 buildkonfig-gradle-plugin = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version.ref = "buildkonfig-gradle-plugin" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
